Some readability / css changes, fix default radio button answers, created back button.

--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,13 @@ html,body {
 .section-heading {
 	position: relative;
 	padding-bottom: 15px;
+    padding-right: 10px;
+    padding-left: 10px;
 	margin: -20px 0 10px;
 	font-family: "Birdseye", sans-serif;
 	font-size: 24px;
 	letter-spacing: 0.05em;
 	text-align: center;
-	text-transform: uppercase;
 }
 
 .section-heading:after {
@@ -142,15 +143,18 @@ filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#
 }
 
 .button {
-	padding: 9px 14px;
-	border-radius: 0;
+	padding: 6px 11px;
 	font-family: "Birdseye", sans-serif;
 	font-size: 14px;
 	line-height: 1.819;
 	letter-spacing: 0.05em;
-	text-transform: uppercase;
     cursor: pointer;
     font-weight: bold;
+}
+
+#prevBtn {
+    margin-right: 2vw;
+    margin-bottom: 3vw;
 }
 
 .button:hover {
@@ -257,7 +261,6 @@ padding-right: 15px;
 #non-greencard-status{
     display: inline-block;
     text-align: left;
-    margin-bottom: 50px;
 }
 
 input {
@@ -267,4 +270,85 @@ input {
 
 a {
     color: rgb(50,0,400);
+}
+
+/** custom radio button css code: originally from https://www.w3schools.com/howto/howto_css_custom_checkbox.asp **/
+/* The container */
+.radioContainer {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  font-size: 17px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  text-align: left;
+}
+
+.floats {
+    float: left;
+}
+
+.leftpad {
+    margin-left: 8vw;
+}
+
+/* Hide the browser's default radio button */
+.radioContainer input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.radioContainer:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.radioContainer input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radioContainer input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.radioContainer .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+} 
+
+.center {
+    display: inline-block;
+}
+
+.centerwrap {
+    text-align: center;
 }
